force-app/main/default/objects/VTXY_SubscriberSubscription__c/VTXY_SubscriberSubscription__c.object-meta.xml
<CustomObject>
    <label>Subscriber Subscription</label>
    <nameField>
        <label>Subscriber Subscription Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subscriber Subscriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>