force-app/main/default/objects/VTXY_SubscriberSubscription__c/fields/Grace_Until__c.field-meta.xml
<CustomField>
    <fullName>Grace_Until__c</fullName>
    <description>Grace period end</description>
    <label>Grace Until</label>
    <type>Date</type>
</CustomField>