force-app/main/default/objects/VTXY_SubscriberSubscription__c/fields/GracePeriodEnd__c.field-meta.xml
<CustomField>
    <fullName>GracePeriodEnd__c</fullName>
    <description>Access grace end date.</description>
    <label>Grace Period End</label>
    <type>Date</type>
</CustomField>