force-app/main/default/objects/VTXY_SubscriberSubscription__c/fields/Minutes_Limit__c.field-meta.xml
<CustomField>
    <fullName>Minutes_Limit__c</fullName>
    <description>Monthly minutes limit</description>
    <label>Minutes Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>