force-app/main/default/objects/VTXY_SubscriberSubscription__c/fields/OverageAllowed__c.field-meta.xml
<CustomField>
    <fullName>OverageAllowed__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Overrides plan default.</description>
    <label>Overage Allowed</label>
    <type>Checkbox</type>
</CustomField>