force-app/main/default/objects/VTXY_SubscriberSubscription__c/fields/RenewalDate__c.field-meta.xml
<CustomField>
    <fullName>RenewalDate__c</fullName>
    <description>Next renewal.</description>
    <label>Renewal Date</label>
    <type>Date</type>
</CustomField>