force-app/main/default/objects/VTXY_SubscriberSubscription__c/fields/SeatsPurchased__c.field-meta.xml
<CustomField>
    <fullName>SeatsPurchased__c</fullName>
    <description>Purchased user seats.</description>
    <inlineHelpText>Purchased user seats.</inlineHelpText>
    <label>Seats Purchased</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>