force-app/main/default/objects/VTXY_SubscriberSubscription__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <description>Subscription start.</description>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>